--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "layers-edx"
 version = "0.1.0"
-description = "A Python port of parts of the NIST EPQ library for electron probe quantification."
+description = "A Python port of the NIST EPQ library for electron probe quantification."
 readme = "README.md"
+license = {text = "Apache-2.0"}
 requires-python = ">=3.8"
 dependencies = [
     "numpy",
@@ -15,13 +16,16 @@ dependencies = [
 
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest",
+    "black",
+    "isort",
+    "flake8",
 ]
 
 [project.urls]
@@ -30,3 +34,8 @@ dev = [
 
 [tool.setuptools]
 packages = ["layers_edx"]
+
+[tool.pytest.ini_options]
+# Skip EPQ tests by default
+addopts = "-m 'not epq and not epq_env'"
+
