fix: update selected lint codes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,10 +77,8 @@ indent-width = 4
 target-version = "py39"
 
 [tool.ruff.lint]
-# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
-# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
-# McCabe complexity (`C901`) by default.
-select = ["E4", "E7", "E9", "F"]
+# Enable Pyflakes (`F`) pycodestyle error (`E`) and warning (`W`) codes.
+select = ["F", "E", "W"]
 ignore = []
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
